--- a/app/views/helloworld.html
+++ b/app/views/helloworld.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Painikkeet</h1>
+  <h1>Testiä</h1>
   <button>Tavallinen painike</button>
   <button class="btn btn-default">Bootstrap painike</button>
-  <button class="btn btn-primary">Bootstrap painike</button>
-  <button class="btn btn-success">Bootstrap painike</button>
-  <button class="btn btn-danger">Bootstrap painike</button>
+  <button class="btn btn-primary">painike</button>
+  <button class="btn btn-success">painike</button>
+  <button class="btn btn-danger">painike</button>
 
   <h1>Tekstikentät</h1>
   <input type="text" placeholder="Tavallinen tekstikenttä">
