tietokanta- ja relaatiokaavioiden lisääminen dokumentointiin

--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -3,7 +3,7 @@
 <h1>Muistilista</h1>
 
 
-<button class="btn btn-primary">Kirjaudu sisään jatkaakseni</button>
+<a href="login" class="btn btn-primary">Kirjaudu sisään jatkaakseni</a>
 
 
 
