dokumentaation ja readmen hiominen

--- a/app/views/suunnitelmat/tehtavat.html
+++ b/app/views/suunnitelmat/tehtavat.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <h1> Tehtävät löytyvät täältä</h1>
+<div>   
+    Tällä sivulla käyttäjä pystyy lisäämään tehtäviä, sekä muokkaamaan niitä.
+</div>
 <form> 
     <div class="form-group">
-       
+
         <input type="text" placeholder="Lisää tähän uusi tehtävä">
-         <button class="btn btn-success">Lähetä</button>
+        <button class="btn btn-success">Lähetä</button>
     </div>
-   
+
 </form>
 {% endblock %}
