mallin ja controllerin vianselvitys jatkuu

--- a/app/views/tehtava/new.html
+++ b/app/views/tehtava/new.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Lisää tehtävä listalle</h1>
+<h1>Lisää tehtävä listalle</h1>
 
-  <form method="post" action="{{base_path}}/tehtava">
+<form method="post" action="{{base_path}}/tehtava">
     <div class="form-group">
-      <label>Nimi</label>
-      <input type="text" name="name" class="form-control">
+        <label>Nimi</label>
+        <input type="text" name="name" class="form-control">
     </div>
 
     <div class="form-group">
-      <label>Tärkeys (valinnainen)</label>
-      <input type="number" name="publisher" class="form-control">
+        <label>Tärkeys (valinnainen)</label>
+        <input type="number" name="publisher" class="form-control">
     </div>
 
-    
+    <div class="form-group">
+        <button type="submit" class="btn btn-primary">Lisää</button>
+    </div>
+</form>
+
+
 {% endblock %}
