--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -1,32 +1,33 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Käyttäjän tehtävät</h1>
+<h1>Käyttäjän tehtävät</h1>
 
-  <p>
-    <a href="{{base_path}}/game/new" class="btn btn-success">Lisää peli</a>
-  </p>
+<p>
+    <a href="{{base_path}}/tehtava/new" class="btn btn-success">Lisää tehtävä</a>
+</p>
 
-  <table class="table table-striped table-bordered">
+<table class="table table-striped table-bordered">
     <thead>
-      <tr>
-        <th>Nimi</th>
-        <th>Tärkeys</th>
-        
-        <th></th>
-      </tr>
+        <tr>
+            <th>Nimi</th>
+            <th>Tärkeys</th>
+            <th>Omistaja</th>
+
+            <th></th>
+        </tr>
     </thead>
 
     <tbody>
-      {% for tehtava in tehtavat %}
+        {% for tehtava in tehtavat %}
         <tr>
-          <td><a href="{{base_path}}/game/{{tehtava.id}}">{{tehtava.nimi}}</td>
-          <td>{{tehtava.nimi}}</td>
-          
-          
-          
-          <td><a class="btn btn-default btn-sm" href="{{base_path}}/tehtava/{{tehtava.id}}/edit">Muokkaa</a></td>
+            <td><a href="{{base_path}}/tehtava/{{tehtava.id}}">{{tehtava.nimi}}</td>
+            <td>{{tehtava.tarkeys}}</td>
+            <td>{{tehtava.kayttaja_id}}>{{kayttaja.nimi}}</td>
+
+
+            <td><a class="btn btn-default btn-sm" href="{{base_path}}/tehtava/{{tehtava.id}}/edit">Muokkaa</a></td>
         </tr>
-      {% endfor %}
+        {% endfor %}
     </tbody>
-  </table>
-{% endblock %
+</table>
+{% endblock %}
