--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
                         <li><a href="{{base_path}}">Etusivu</a></li>
-                        <li><a href="tehtavat">Tehtävät</a></li>
+                        <li><a href="tehtava">Tehtävät</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="login">Kirjaudu sisään</a></li>
