--- a/app/views/tehtava/new.html
+++ b/app/views/tehtava/new.html
@@ -5,12 +5,12 @@
 <form method="post" action="{{base_path}}/tehtava">
     <div class="form-group">
         <label>Nimi</label>
-        <input type="text" name="name" class="form-control">
+        <input type="text" name="nimi" class="form-control">
     </div>
 
     <div class="form-group">
         <label>Tärkeys (valinnainen)</label>
-        <input type="number" name="publisher" class="form-control">
+        <input type="number" name="tarkeys" class="form-control">
     </div>
 
     <div class="form-group">
