tehtava-mallin ja kontrollerin säätöä, lisäysominaisuus toimintaan

--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -25,7 +25,8 @@
 
 
 
-            <td><a class="btn btn-default btn-sm" href="{{base_path}}/tehtava/{{tehtava.id}}/edit">Muokkaa</a></td>
+            <td><a class="btn btn-default btn-sm" href="{{base_path}}/tehtava/{{tehtava.id}}/edit">Muokkaa</a>
+            <a <button class="btn btn-danger">Poista</button></a></td>
         </tr>
         {% endfor %}
     </tbody>
