--- a/app/views/base.html
+++ b/app/views/base.html
@@ -40,10 +40,10 @@
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
                         <li><a href="{{base_path}}">Etusivu</a></li>
-                        <li><a href="tehtava">Tehtävät</a></li>
+                        <li><a href="{{base_path}}/tehtava">Tehtävät</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="login">Kirjaudu sisään</a></li>
+                        <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
                     </ul>
                 </div>
             </div>
