--- a/app/views/tehtava/show.html
+++ b/app/views/tehtava/show.html
@@ -3,7 +3,7 @@
 <h1>Tehtävän nimi: {{tehtava.nimi}}</h1>
 
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="#" class="btn btn-default">Muokkaa</a>
+    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tehtava/edit" class="btn btn-default">Muokkaa</a>
 </p>
 
 <ul>
@@ -11,5 +11,5 @@
     <li><strong>Tärkeys :</strong> {{tehtava.tarkeys}}</li>
 
 </ul>
-<
+
 {% endblock %}
