--- a/app/views/tehtava/edit.html
+++ b/app/views/tehtava/edit.html
@@ -11,7 +11,7 @@
 
     <div class="form-group">
         <label>Tärkeys</label>
-        <input type="number" name="tarkeys" class="form-control">
+        <input type="text" name="tarkeys" class="form-control">
     </div>
 
     <div class="form-group">
