--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% import "macros/forms.html" as forms %}
 <h1>Käyttäjän tehtävät</h1>
 
 <p>
@@ -11,7 +12,7 @@
         <tr>
             <th>Nimi</th>
             <th>Tärkeys</th>
-            
+
 
             <th></th>
         </tr>
@@ -26,7 +27,10 @@
 
 
             <td><a class="btn btn-default btn-sm" href="{{base_path}}/tehtava/{{tehtava.id}}/edit">Muokkaa</a>
-            <a <button class="btn btn-danger">Poista</button></a></td>
+            {{forms.destroy_button("#{base_path}/tehtava/#{tehtava.id}/destroy")}}   
+                
+           
+          </td>
         </tr>
         {% endfor %}
     </tbody>
