--- a/app/views/tehtava/show.html
+++ b/app/views/tehtava/show.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+{% import "macros/forms.html" as forms %}
 <h1>Tehtävän nimi: {{tehtava.nimi}}</h1>
 
 <p>
-    <button class="btn btn-danger">Poista</button> <a href="{{base_path}}/tehtava/edit" class="btn btn-default">Muokkaa</a>
+    {{forms.destroy_button("#{base_path}/tehtava/#{tehtava.id}/destroy")}}  
+    <a href="{{base_path}}/tehtava/{{tehtava.id}}/edit" class="btn btn-default">Muokkaa</a>
 </p>
 
 <ul>
