--- a/app/views/kayttaja/login.html
+++ b/app/views/kayttaja/login.html
@@ -2,15 +2,15 @@
 {% block content %}
 <h1>Kirjaudu sisään</h1>
 
-<!-- Kaikki lomakkeen elementit form-tagin sisään -->
+
 <form method="post" action="{{base_path}}/login">
-    <!-- Tekstikenttä käyttäjätunnukselle -->
+   
     <div class="form-group">
         <label>Käyttäjätunnus</label>
-         <input type="text" class="form-control" name="Käyttäjänimi" value="{{nimi}}">
+         <input type="text" class="form-control" name="nimi" value="{{nimi}}">
     </div>
 
-    <!-- Salasanakenttä salasanalle -->
+    
     <div class="form-group">
         <label>Salasana</label>
         <input type="password" class="form-control" name="password">
