--- a/app/views/base.html
+++ b/app/views/base.html
@@ -42,9 +42,15 @@
                         <li><a href="{{base_path}}">Etusivu</a></li>
                         <li><a href="{{base_path}}/tehtava">Tehtävät</a></li>
                     </ul>
+                    {% if user_logged_in %}
+                    <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+                        <button type="submit" class="btn btn-default">Kirjaudu ulos</button>
+                    </form>
+                    {% else %}
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="{{base_path}}/login">Kirjaudu sisään</a></li>
                     </ul>
+                    {% endif %}
                 </div>
             </div>
         </nav>
