--- a/app/views/base.html
+++ b/app/views/base.html
@@ -41,6 +41,7 @@
                         <!-- Navigaation linkit -->
                         <li><a href="{{base_path}}">Etusivu</a></li>
                         <li><a href="{{base_path}}/tehtava">Tehtävät</a></li>
+                        <li><a href="{{base_path}}/kategoria">Kategoriat</a></li>
                     </ul>
                     {% if user_logged_in %}
                     <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
