--- a/app/views/kategoria/show.html
+++ b/app/views/kategoria/show.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 {% import "macros/forms.html" as forms %}
-<h1>Tehtävän nimi: {{kategoria.nimi}}</h1>
+<h1>Kategorian nimi: {{kategoria.nimi}}</h1>
 
 <p>
     {{forms.destroy_button("#{base_path}/kategoria/#{kategoria.id}/destroy")}}  
@@ -9,7 +9,7 @@
 </p>
 
 <ul>
-    <li><strong>Nimi :</strong> {{tehtava.nimi}}</li>
+    <li><strong>Nimi :</strong> {{kategoria.nimi}}</li>
 
 </ul>
 
