kategorian valitseminen tehtävässä

--- a/app/views/tehtava/edit.html
+++ b/app/views/tehtava/edit.html
@@ -14,6 +14,14 @@
         <label>Tärkeys</label>
         <input type="text" name="tarkeys" class="form-control">
     </div>
+    <div class="form-group">
+        <label>Kategoria</label>
+        <select class="form-control" name="kategoria">
+            {% for kategoria in kategoriat %}
+            <option value="{{kategoria.id}}">{{kategoria.nimi}}</option>
+            {% endfor %}
+        </select>
+    </div>
 
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Päivitä</button>
