--- a/app/views/kategoria/edit.html
+++ b/app/views/kategoria/edit.html
@@ -4,7 +4,7 @@
 <h1>Muokkaa kategoriaa: "{{kategoria.nimi}}"</h1>
 
 
-<form method="post" action="{{base_path}}/tehtava/{{kategoria.id}}/edit">
+<form method="post" action="{{base_path}}/kategoria/{{kategoria.id}}/edit">
     <div class="form-group">
         <label>Nimi</label>
         <input type="text" name="nimi" class="form-control">
