--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -24,6 +24,7 @@
         <tr>
             <td><a href="{{base_path}}/tehtava/{{tehtava.id}}">{{tehtava.nimi}}</td>
             <td>{{tehtava.tarkeys}}</td>
+            <td>{{kategoria.nimi}}</td>
 
 
 
