--- a/app/views/kategoria/show.html
+++ b/app/views/kategoria/show.html
@@ -5,7 +5,7 @@
 
 <p>
     {{forms.destroy_button("#{base_path}/kategoria/#{kategoria.id}/destroy")}}  
-    <a href="{{base_path}}/tehtava/{{kategoria.id}}/edit" class="btn btn-default">Muokkaa</a>
+    <a href="{{base_path}}/kategoria/{{kategoria.id}}/edit" class="btn btn-default">Muokkaa</a>
 </p>
 
 <ul>
