--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Muistilista</h1>
-
-
+{% if user_logged_in %}
+<a href ="tehtava"> Siirry tehtäviin</a>
+{% else %}
 <a href="login" class="btn btn-primary">Kirjaudu sisään jatkaakseni</a>
-
+{% endif %}
 
 
 
