kategorian alta löytyy siihen liitetyt tehtävät

--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -13,6 +13,7 @@
         <tr>
             <th>Nimi</th>
             <th>Tärkeys</th>
+            <th>Kategoria</th>
 
 
             <th></th>
@@ -24,7 +25,7 @@
         <tr>
             <td><a href="{{base_path}}/tehtava/{{tehtava.id}}">{{tehtava.nimi}}</td>
             <td>{{tehtava.tarkeys}}</td>
-            <td>{{kategoria.nimi}}</td>
+            <td><a href="{{base_path}}/kategoria/{{tehtava.kategoria_id}}">{{tehtava.kategoria_id}}</td>
 
 
 
