--- a/app/views/tehtava/new.html
+++ b/app/views/tehtava/new.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
     <label>Kategoria</label>
-  <select class="form-control" name="kategoria">
+  <select class="form-control" name="kategoria_id">
     {% for kategoria in kategoriat %}
       <option value="{{kategoria.id}}">{{kategoria.nimi}}</option>
     {% endfor %}
