--- a/app/views/tehtava/edit.html
+++ b/app/views/tehtava/edit.html
@@ -15,12 +15,12 @@
         <input type="text" name="tarkeys" class="form-control">
     </div>
     <div class="form-group">
-        <label>Kategoria</label>
-        <select class="form-control" name="kategoria">
-            {% for kategoria in kategoriat %}
-            <option value="{{kategoria.id}}">{{kategoria.nimi}}</option>
-            {% endfor %}
-        </select>
+    <label>Kategoria</label>
+  <select class="form-control" name="kategoria_id">
+    {% for kategoria in kategoriat %}
+      <option value="{{kategoria.id}}">{{kategoria.nimi}}</option>
+    {% endfor %}
+  </select>
     </div>
 
     <div class="form-group">
