rekisteröityminen ja tehtävät käyttäjäkohtaisia

--- a/app/views/suunnitelmat/etusivu.html
+++ b/app/views/suunnitelmat/etusivu.html
@@ -4,7 +4,7 @@
 {% if user_logged_in %}
 <a href ="tehtava"> Siirry tehtäviin</a>
 {% else %}
-<a href="login" class="btn btn-primary">Kirjaudu sisään jatkaakseni</a>
+<a href="login" class="btn btn-primary">Kirjaudu sisään jatkaaksesi</a>
 {% endif %}
 
 
