--- a/app/views/kayttaja/register.html
+++ b/app/views/kayttaja/register.html
@@ -1,23 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Kirjaudu sisään</h1>
+<h1>Luo käyttäjätunnus</h1>
 
-
-<form method="post" action="{{base_path}}/login">
-   
+<form method="post" action="{{base_path}}/kayttaja">
+  
     <div class="form-group">
         <label>Käyttäjätunnus</label>
          <input type="text" class="form-control" name="nimi" value="{{nimi}}">
     </div>
 
-    
+  
     <div class="form-group">
         <label>Salasana</label>
-        <input type="password" class="form-control" name="password">
+        <input type="password" class="form-control" name="password" value="{{password}}">
     </div>
 
-    <button type="submit" class="btn btn-primary">Kirjaudu sisään</button>
+    <button type="submit" class="btn btn-primary">Rekisteröidy!</button>
 </form>
-
-Ei tunnusta?<a href="register">Rekisteröidy!</a>
 {% endblock %}
