kategorian poistaminen ei enää kaada softaa

--- a/app/views/kategoria/show.html
+++ b/app/views/kategoria/show.html
@@ -18,7 +18,7 @@
         <tr>
             <th>Nimi</th>
             <th>Tärkeys</th>
-
+            <th>Kategoria</th>
 
             <th></th>
         </tr>
