--- a/app/views/tehtava/index.html
+++ b/app/views/tehtava/index.html
@@ -25,7 +25,7 @@
         <tr>
             <td><a href="{{base_path}}/tehtava/{{tehtava.id}}">{{tehtava.nimi}}</td>
             <td>{{tehtava.tarkeys}}</td>
-            <td><a href="{{base_path}}/kategoria/{{tehtava.kategoria_id}}">{{tehtava.kategoria_id}}</td>
+            <td>{{kategoria.nimi}}</td>
 
 
 
