tyhjillä tunnuksilla ei voi enää rekisteröityä

--- a/app/views/kayttaja/register.html
+++ b/app/views/kayttaja/register.html
@@ -2,6 +2,8 @@
 {% block content %}
 <h1>Luo käyttäjätunnus</h1>
 
+{{message}}
+
 <form method="post" action="{{base_path}}/kayttaja">
   
     <div class="form-group">
